Fixed vertical align issue

--- a/src/jquery.onf-nfb.less
+++ b/src/jquery.onf-nfb.less
@@ -165,6 +165,7 @@
 				margin:0;
 				width:120px;
 				z-index:@z-index + 1;
+				vertical-align: top;
 			}
 			#onf-top-search-btn {
 				width:35px;
@@ -173,6 +174,7 @@
 				background: transparent url("@{img-path}search_off.gif") no-repeat 0px 0px;
 				z-index:@z-index;
 				cursor:pointer;
+				vertical-align: top;
 			}
 		}
 	}
